.provarCaches/00D5f000005vwGkEAI/objects/rstk__requpload__c.object
<CustomObject>
    <description>requpload__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__requpload_comment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__requpload_duedte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__requpload_item__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__requpload_ordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__requpload_qtyreq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Supplier Requisition Upload</label>
    <listViews>
        <fullName>rstk__Supplier_Requisition_Uploads_Detail</fullName>
        <columns>NAME</columns>
        <columns>rstk__requpload_comment__c</columns>
        <columns>rstk__requpload_duedte__c</columns>
        <columns>rstk__requpload_item__c</columns>
        <columns>rstk__requpload_qtyreq__c</columns>
        <columns>rstk__requpload_ordno__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Supplier Requisition Uploads Detail</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Supplier Requisition Upload Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Requisition Uploads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Due_Date</fullName>
        <active>true</active>
        <description>Due Date is Required.</description>
        <errorConditionFormula>ISBLANK( rstk__requpload_duedte__c )</errorConditionFormula>
        <errorMessage>Due Date is Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Part_Number</fullName>
        <active>true</active>
        <description>Part Number is Required.</description>
        <errorConditionFormula>ISBLANK( rstk__requpload_item__c )</errorConditionFormula>
        <errorDisplayField>rstk__requpload_comment__c</errorDisplayField>
        <errorMessage>Part Number is Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Quantity</fullName>
        <active>true</active>
        <description>Quantity is Required and cannot be less than zero.</description>
        <errorConditionFormula>ISBLANK( rstk__requpload_qtyreq__c ) || rstk__requpload_qtyreq__c &lt; 0</errorConditionFormula>
        <errorMessage>Quantity is Required and cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Requisition_Number</fullName>
        <active>true</active>
        <description>Requisition Number is Required.</description>
        <errorConditionFormula>ISBLANK( rstk__requpload_ordno__c )</errorConditionFormula>
        <errorMessage>Requisition Number is Required.</errorMessage>
    </validationRules>
</CustomObject>